components/datagrid-rest-service/manifests/datagrid2rest-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: datagrid-to-rest
  labels:
    camel.apache.org/generation: '1'
    camel.apache.org/integration: datagrid-to-rest-route
    camel.apache.org/service.type: user
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9080
  selector:
    camel.apache.org/integration: datagrid-to-rest-route
  type: ClusterIP
  sessionAffinity: None
